# drumblender

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  train-packages.txt
.github/workflows/: inference.yaml  lint.yml  test.yml  test_modal.yml
cfg/: 01_noise_params.yaml  02_transient_params.yaml  03_noise_transient_params.yaml  04_noise_parallel_transient_params.yaml  05_all_parallel.yaml  06_modal.yaml  ae_eats_ms_only.yaml  autoencoder_eats.yaml  autoencoder_eats_tpar.yaml  kick_single_conditioned.yaml  kick_single_kicktcn.yaml  kick_synth.yaml  kick_synth_lrg.yaml  kick_synth_lrg_mfcc.yaml  noise_params.yaml  regression.yaml  single_modal.yaml  soundstream_noise-parallel_transient_params.yaml  soundstream_noise_params.yaml  soundstream_noise_transient_params.yaml  soundstream_transient_params.yaml
cfg/archive/: autoencoder_eats.yaml  autoencoder_eats_tpar.yaml  eats_ae_no_transient.yaml  noise_transient_params.yaml  single_modal.yaml
cfg/data/: PERCUSSION.md  freesound.yaml  kick.yaml  kick_modal.yaml  kick_modal_b16.yaml  kick_modal_mfcc.yaml  kick_modal_mfcc_b16.yaml  kick_modal_mfcc_small.yaml  kick_modal_openl3.yaml  kick_modal_openl3_small.yaml  kick_modal_params.yaml  kick_modal_small.yaml  kick_single_808_1mode.yaml  kick_single_ludwig_10mode.yaml  kick_single_ludwig_1mode.yaml  kick_small.yaml  multiplication.yaml  percussion.yaml  percussion_yurt.yaml
cfg/logger/: wandb.yaml
cfg/loss/: dual_loss.yaml  l1waveform.yaml  mse.yaml  mss.yaml  mss_lin_sc.yaml  triple_loss.yaml  waveform_diff.yaml
cfg/metrics/: drumblender_metrics.yaml
cfg/models/: mlp.yaml
cfg/optimizer/: adam.yaml  sgd.yaml
cfg/synths/: noise.yaml  transient_tcn.yaml  transient_tcn_nofilm.yaml
drumblender/: callbacks.py  cli.py  loss.py  metrics.py
drumblender/data/: __init__.py  audio.py  embeddings.py  (+2 more)
examples/: aux_functions.py  modal.ipynb  modes_dwt.ipynb  modes_noise.ipynb
features/: extract_features.sh
percussionsynth/: callbacks.py  cli.py
scripts/: compile_results.py  evaluation.md  reconstruction_commands.txt  reconstruction_metrics.sh  reconstruction_metrics_inst.sh  reconstruction_metrics_inst_old.sh  reconstruction_modal.sh
test/: conftest.py
(+97 files in other folders)
